[gd_scene load_steps=36 format=2]

[ext_resource path="res://boss/EVil Wizard 2/Sprites/Attack1.png" type="Texture" id=1]
[ext_resource path="res://boss/EVil Wizard 2/Sprites/Death.png" type="Texture" id=2]
[ext_resource path="res://boss/EVil Wizard 2/Sprites/Run.png" type="Texture" id=3]
[ext_resource path="res://HUD/blood_red_bar.png" type="Texture" id=4]
[ext_resource path="res://boss/EVil Wizard 2/Sprites/Take hit.png" type="Texture" id=5]
[ext_resource path="res://boss/boss.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "ferit",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "caminar",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "mort",
"speed": 7.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "atac",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 56, 72 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 16, 64 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -33.8877, -72 )
scale = Vector2( 1.6955, 2.1235 )
frames = SubResource( 21 )
animation = "ferit"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -32, -48 )
shape = SubResource( 22 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="dreta" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 48, -40 )
shape = SubResource( 23 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="esquerra" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -112, -40 )
shape = SubResource( 23 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, -24 )
enabled = true
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.097
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.642
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 2.0

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -74.212
margin_top = -129.44
margin_right = 225.788
margin_bottom = -89.4399
rect_scale = Vector2( 0.27, 0.27 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comp_dreta" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="comp_dreta"]
position = Vector2( 0, -0.37458 )
polygon = PoolVector2Array( -111.068, 22.8625, -91.0538, -119.21, -80.332, 22.4171 )

[node name="comp_esquerra" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="comp_esquerra"]
position = Vector2( 0, -0.374573 )
polygon = PoolVector2Array( 11.876, 21.5262, 26.5634, -119.21, 52.4119, 23.7534 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="area_entered" from="comp_dreta" to="." method="_on_comp_dreta_area_entered"]
[connection signal="area_entered" from="comp_esquerra" to="." method="_on_comp_esquerra_area_entered"]
